# Netology

./: .gitignore
Basic programming in C++/Classes and Objects/Task 1/: README.md
Basic programming in C++/Classes and Objects/Task 2/: Task 2.sln
Basic programming in C++/Homework 2/Task 1/: README.md
Basic programming in C++/Homework 2/Task 2/: README.md
Basic programming in C++/Homework 2/Task 3/: README.md  Task 3.sln
Basic programming in C++/OOP - abstraction and encapsulation/Task 1/: README.md
Basic programming in C++/OOP - abstraction and encapsulation/Task 2/: README.md  Task 2.sln
advanced_programming_in_c++/STL_pt1/task_1/: main.cpp
advanced_programming_in_c++/STL_pt1/task_2/: main.cpp
advanced_programming_in_c++/STL_pt1/task_3/: CMakeLists.txt  main.cpp
advanced_programming_in_c++/STL_pt2/task_1/: main.cpp
advanced_programming_in_c++/STL_pt2/task_2/: CMakeLists.txt  main.cpp
advanced_programming_in_c++/life_cycle_of_an_object_raii/task_1/: main.cpp
advanced_programming_in_c++/life_cycle_of_an_object_raii/task_2/: main.cpp
advanced_programming_in_c++/move_semantics/task_1/: CMakeLists.txt  main.cpp
advanced_programming_in_c++/move_semantics/task_2/: main.cpp
advanced_programming_in_c++/smart_pointers/task_1/: main.cpp
advanced_programming_in_c++/smart_pointers/task_3/: main.cpp
advanced_programming_in_c++/templates_and_functors/task_1/: main.cpp
advanced_programming_in_c++/templates_and_functors/task_2/: main.cpp
advanced_programming_in_c++/templates_and_functors/task_3/: main.cpp
advanced_programming_in_c++/testing/task_1/: CMakeLists.txt  main.cpp
advanced_programming_in_c++/testing/task_2/: CMakeLists.txt  main.cpp
advanced_programming_in_c++/under_the_hood_compilation_and_linking/task_1/: task_1.sln
basic_programming_in_c++/building_and_connecting_libraries/task_2/: task_2.sln
basic_programming_in_c++/building_and_connecting_libraries/task_3/: CMakeLists.txt  Leaver.cpp  Leaver.h  client.cpp
basic_programming_in_c++/building_and_connecting_libraries/task_4/: task_4.sln
basic_programming_in_c++/building_and_connecting_libraries/task_5/: CMakeLists.txt  Shapes.cpp  Shapes.h
basic_programming_in_c++/c_make/task_2/: CMakeLists.txt  EquilateralTriangle.cpp  Figure.h  Quadrilateral.h  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.h  Triangle.h
basic_programming_in_c++/c_make/training/: CMakeLists.txt
basic_programming_in_c++/classes_and_objects/task_1/: Task 1.sln
basic_programming_in_c++/classes_and_objects/task_2/: README.md
cross_platform_development_on_qt/working_with_database/08_PreDataBase/: CMakeLists.txt  database.cpp
projects/airport_inspector/: CMakeLists.txt  Specification_of_requirements.ods  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stats.cpp  stats.h  stats.ui
projects/ini_file_parser/: CMakeLists.txt  main.cpp  some.ini
projects/ini_file_parser/ini_parser/: ini_parser.cpp  ini_parser.h
projects/race_simulator/: race_simulator.sln
projects/race_simulator_cmake/: CMakeLists.txt  main.cpp
projects/race_simulator_cmake/Enums/: CMakeLists.txt  EAddTransport.h  ETransports.h
projects/race_simulator_cmake/Functions/: functions.cpp  functions.h  menus.cpp  menus.h  race_case.cpp  race_handler.cpp
projects/race_simulator_cmake/Races/: AirRace.cpp  LandRace.cpp  MixedRace.h  Race.cpp  Race.h
projects/race_simulator_cmake/Transports/: Transport.h
projects/race_simulator_cmake/Transports/Air/: AirTransport.cpp  AirTransport.h  Broomstick.cpp  Eagle.h
projects/race_simulator_cmake/Transports/Land/: Centaur.cpp  LandTransport.h  SpeedsterCamel.cpp  SpeedsterCamel.h
projects/test/: CMakeLists.txt  main.cpp
working_with_databases/advanced_data_sampling/: create_queries.sql  insert_queries.sql  select_queries.sql
(+380 files in other folders)
