cmake_minimum_required(VERSION 3.22.0)
project(RaceSimulator_CMake)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(RaceLib SHARED "Races/Race.h" "Races/Race.cpp" "Transports/Transport.h" "Transports/Transport.cpp" "Transports/Land/Camel.h" "Transports/Land/Camel.cpp" "Enums/ERaceTypes.h" "Enums/ETransports.h" "Transports/Land/AllTerrainBoots.h" "Transports/Land/AllTerrainBoots.cpp" "Enums/EAddTransport.h" "Transports/Air/Broomstick.cpp" "Transports/Air/Broomstick.h" "Transports/Land/LandTransport.h" "Transports/Land/LandTransport.cpp" "Transports/Land/SpeedsterCamel.cpp" "Transports/Land/SpeedsterCamel.h" "Transports/Land/Centaur.cpp" "Transports/Land/Centaur.h" "Transports/Air/AirTransport.h" "Transports/Air/AirTransport.cpp" "Transports/Air/MagicCarpet.h" "Transports/Air/MagicCarpet.cpp" "Transports/Air/Eagle.h" "Transports/Air/Eagle.cpp" "Races/LandRace.cpp" "Races/LandRace.h" "Races/AirRace.cpp" "Races/AirRace.h" "Races/MixedRace.h" "Races/MixedRace.cpp")
add_executable(Main main.cpp "Functions/functions.cpp" "Functions/functions.h" "Functions/select_transport.cpp" "Functions/select_transport.h" "Functions/add_transport_handler.h" "Functions/add_transport_handler.cpp")
target_link_libraries(Main RaceLib)