cmake_minimum_required(VERSION 3.22.0)
project(task_2)
add_executable(task_2 main.cpp "EquilateralTriangle.cpp" "EquilateralTriangle.h" "Figure.cpp" "Figure.h" "IsoscelesTriangle.cpp" "IsoscelesTriangle.h" "Parallelogram.cpp" "Parallelogram.h" "Quadrilateral.cpp" "Quadrilateral.h" "Rectangle.cpp" "Rectangle.h" "Rhombus.cpp" "Rhombus.h" "RightTriangle.cpp" "RightTriangle.h" "Square.cpp" "Square.h" "Triangle.cpp" "Triangle.h")